--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -1,69 +1,74 @@
 .navbar-brand img {
-    width:100%;
-    max-width:30px;
-
+  width: 100%;
+  max-width: 30px;
 }
 
 #header {
-  background-color: rgb(0, 14, 40);
-  padding: 10px 0;
+background-color: rgb(0, 14, 40);
+padding: 20px 20px 50px 20px;
+margin: 0 auto;
+}
+@media (min-width: 1200px) {
+header {
+  max-width: 1140px;
+}
 }
 
 #header .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+display: flex;
+justify-content: center;
+align-items: center;
 }
 
 #logo {
-  margin-right: auto;
+margin-right: auto;
 }
 
 .navbar {
-  display: flex;
-  align-items: center;
+display: flex;
+align-items: center;
 }
 
 .list-inline {
-  display: flex;
-  list-style: none;
-  padding: 0;
-  margin: 0;
+display: flex;
+list-style: none;
+padding: 0;
+margin: 0;
 }
 
 .list-inline li {
-  margin: 0 10px;
+margin: 0 10px;
 }
 
 .nav-item .dropdown-toggle::after {
-  display: none; /* ドロップダウン矢印を非表示にする */
+display: none; /* ドロップダウン矢印を非表示にする */
 }
 
 .dropdown-menu {
-  background-color: #fff;
-  border: none;
-  border-radius: 0;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+background-color: #fff;
+border: none;
+border-radius: 0;
+box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .dropdown-item {
-  color: #000;
-  padding: 10px 20px;
+color: #000;
+padding: 10px 20px;
 }
 
 .dropdown-item:hover {
-  background-color: #f1f1f1;
+background-color: #f1f1f1;
 }
 
 .nav-link {
-  color: #fff;
-  text-decoration: none;
+color: #fff;
+text-decoration: none;
 }
 
 .nav-link:hover {
-  text-decoration: underline;
+text-decoration: underline;
 }
 
 .fab, .far {
-  color: #fff;
+color: #fff;
 }
