--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -73,10 +73,13 @@ text-decoration: underline;
 color: #fff;
 }
 
-.modal-footer {
-  display: flex !important;
-  justify-content: space-between;
+.modal-footer .btn-group, 
+.modal-footer .btn-group-vertical {
+  display: flex !important; /* displayをflexに強制設定 */
+  justify-content: space-between; /* ボタンを左右に配置 */
+  width: 100%; /* ボタンを均等に配置するための設定 */
 }
+
 .modal-footer .btn {
-  width: 48%;
+  width: 48%; /* ボタンの幅を48%に設定 */
 }
