--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -72,8 +72,11 @@ text-decoration: underline;
 .fab, .far {
 color: #fff;
 }
-.btn-group, .btn-group-vertical {
-  position: relative;
-  display: block !important;
-  vertical-align: middle;
+.modal-footer {
+  display: flex !important;
+  justify-content: space-between;
+}
+
+.modal-footer .btn {
+  width: 48%;
 }
