--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -85,3 +85,31 @@ color: #fff;
   width: 48%;
   text-align: center;
 }
+
+#success-message {
+  display: none;
+  padding: 20px;
+  border: 2px solid #4caf50;
+  background-color: #dff0d8;
+  color: #3c763d;
+  text-align: center;
+  margin-top: 20px;
+  border-radius: 5px;
+}
+
+#success-message {
+  display: none;
+  padding: 20px;
+  border: 2px solid #4caf50;
+  background-color: #dff0d8;
+  color: #3c763d;
+  text-align: center;
+  margin-top: 20px;
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+#success-message.show {
+  opacity: 1;
+}
