--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -52,6 +52,12 @@ html {
   }
 }
 
+@media (min-width: 1400px) {
+  .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+      max-width: 1140px !important;
+  }
+}
+
 .row {
   display: -ms-flexbox;
   display: flex;
