--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,18 @@
 
 /* カスタムスタイルを追加 */
 
+body, html {
+  /* スタイル */
+}
+
+#root .container {
+  /* スタイル */
+}
+
+.navbar.navbar-expand-lg {
+  /* スタイル */
+}
+
 .text-dark {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-dark-rgb), var(--bs-text-opacity)) !important;
@@ -11,12 +23,17 @@
 
 body {
   background-color: rgb(0, 14, 40) !important;
-  color: #fff;
+  color: #fff !important;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.3em;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 /* styles/globals.css または components/Footer.js に <style jsx> タグ内で追加 */
 
 #footer {
@@ -49,6 +66,10 @@ body {
 header {
   background-color: rgb(0, 14, 40);
   padding: 20px 0;
+  padding-top: 20px;
+  padding-right: 0px;
+  padding-bottom: 0px;
+  padding-left: 0px;
 }
 
 #header .container {
@@ -214,3 +235,207 @@ footer {
   }
 }
 
+.list-group-item {
+  margin-bottom: 10px;
+  border-radius: 5px;
+}
+
+.chat-container {
+  margin-top: 0;
+  background-color: #ffffff00;
+  padding: 0 20px 20px 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.chat-box {
+  background-color: #e9ecef;
+  padding: 10px;
+  border-radius: 5px;
+  height: 300px;
+  overflow-y: auto;
+  margin-bottom: 10px;
+}
+
+.chat-message {
+  background-color: #393e43;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  max-width: 60%;
+}
+
+.chat-input input {
+  /*width: calc(100% - 80px);*/
+  margin-right: 10px;
+}
+
+.chat-input button {
+  width: 70px;
+}
+
+
+.navbar-brand img {
+  width: 100%;
+  max-width: 30px;
+}
+
+#header {
+background-color: rgb(0, 14, 40);
+margin: 0 auto;
+}
+
+#header .container {
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+#logo {
+margin-right: auto;
+}
+
+.navbar {
+display: flex;
+align-items: center;
+}
+
+.list-inline {
+display: flex;
+list-style: none;
+padding: 0;
+margin: 0;
+}
+
+.list-inline li {
+margin: 0 10px;
+}
+
+.nav-item .dropdown-toggle::after {
+display: none; /* ドロップダウン矢印を非表示にする */
+}
+
+.dropdown-menu {
+background-color: #fff;
+border: none;
+border-radius: 0;
+box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.dropdown-item {
+color: #000;
+padding: 10px 20px;
+}
+
+.dropdown-item:hover {
+background-color: #f1f1f1;
+}
+
+.nav-link {
+color: #fff;
+text-decoration: none;
+}
+
+.nav-link:hover {
+text-decoration: underline;
+}
+
+.fab, .far {
+color: #fff;
+}
+
+/* 他のスタイルの下に追加 */
+.modal-footer .btn-group,
+.modal-footer .btn-group-vertical {
+  display: flex !important;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.modal-footer .btn {
+  width: 48%;
+  text-align: center;
+}
+
+#success-message {
+  display: none;
+  padding: 20px;
+  text-align: center;
+  margin-top: 20px;
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+#success-message p {
+  margin: 0;
+  font-size: 1.2em; /* フォントサイズを少し大きく */
+}
+
+.modal.show #success-message {
+  display: block;
+  opacity: 1;
+}
+
+
+/*----------------------------------------
+  grid start
+-----------------------------------------*/
+.container a {
+  color: #fff;
+  text-decoration-line: none;
+}
+.container {
+  color: #fff;
+  text-decoration-line: none;
+}
+.container p{
+  color: #fff;
+  text-decoration-line: none;
+}
+.grid_row
+{
+display: block;
+flex-basis: 0;
+margin: 0 auto;
+}
+
+.grid_row .row {
+border-bottom: 1px solid #ddd;
+text-align: left;
+padding: .5rem;
+}
+.row_first {
+display: -ms-flexbox;
+display: flex;
+-ms-flex-wrap: wrap;
+flex-wrap: wrap;
+margin-right: 0px;
+margin-left: 0px;
+}
+.grid_row .row_first {
+border-top: 1px solid #ddd;
+border-bottom: 1px solid #ddd;
+text-align: left;
+padding: .5rem;
+}
+@media (min-width: 1200px){
+.row_first {
+margin-right: -15px;
+margin-left: -15px;
+}
+}
+@media (min-width: 1200px){
+.row {
+margin-right: -15px;
+margin-left: -15px;
+}
+}
+.row.toybox {
+background-color: rgb(36 47 59 / 0.5);
+}
+
+/*----------------------------------------
+grid end
+-----------------------------------------*/
