--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -55,7 +55,18 @@ body {
 
 body {
   margin: 0;
-  font-family: var(--font-sans), ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+  font-family:
+    var(--font-sans),
+    ui-sans-serif,
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Helvetica,
+    Arial,
+    "Apple Color Emoji",
+    "Segoe UI Emoji";
   background-color: rgb(0, 14, 40);
   color: #fff;
 }
@@ -68,7 +79,6 @@ header {
   padding-bottom: 0px;
   padding-left: 0px;
 }
-
 
 /* global.css */
 
@@ -140,9 +150,9 @@ header {
 /* stylelint-disable at-rule-no-unknown */
 @layer base {
   :root {
-  --rem-base: 10px;
-  --font-size-base: 10px;
-  --line-height-base: 1.3em;
+    --rem-base: 10px;
+    --font-size-base: 10px;
+    --line-height-base: 1.3em;
     --sidebar-background: 0 0% 98%;
     --sidebar-foreground: 240 5.3% 26.1%;
     --sidebar-primary: 240 5.9% 10%;
@@ -226,8 +236,6 @@ header {
   background-color: rgb(0, 14, 40);
   margin: 0 auto;
 }
-
-
 
 .list-inline li {
   margin: 0 10px;
